[project]
name = "a3d-comfyui-integration"
description = "[a/A3D](https://github.com/n0neye/A3D) is an AI x 3D hybrid tool that allows you to compose 3D scenes and render them with AI. This integration allows you to send the color & depth images to ComfyUI. You can use it as a pose controller, or scene composer for your ComfyUI workflows."
version = "1.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/n0neye/A3D-comfyui-integration"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "n0neye"
DisplayName = "A3D ComfyUI Integration"
Icon = "https://storage.googleapis.com/nontech-webpage/ai-editor/assets/logo_circle_512.png"
